@@ -7,22 +7,20 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
-
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowCredentials(true); // 允许携带 cookie
-        config.setAllowedOriginPatterns(Arrays.asList("*")); // 允许所有前端域名访问
-        config.setAllowedHeaders(Arrays.asList("*")); // 允许所有请求头
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 允许的请求方法
+        config.setAllowCredentials(true);
+        config.setAllowedOriginPatterns(List.of("*"));  // 注意：Spring Boot 3 推荐使用这个方法
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // 应用于所有接口路径
-
+        source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
 }
